# pirate

./: .gitignore  README.md  pyproject.toml
pirate/: __init__.py  cli.py  config.py  features.py  similarity.py  store.py
